# idemanta

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-04-09-learning-platform.md  2026-04-10-smart-swarm.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ResizeHandle.tsx
src/components/agents/: AgentCard.tsx  AgentOutput.tsx  AgentPanel.tsx
src/components/agentview/: AgentView.tsx
src/components/commandpalette/: CommandPalette.tsx
src/components/editor/: Editor.tsx
src/components/filetree/: FileTree.tsx
src/components/git/: GitPanel.tsx
src/components/menubar/: MenuBar.tsx
src/components/project/: ProjectBoard.tsx  ProjectPanel.tsx
src/components/runtime/: RuntimePanel.tsx
src/components/search/: SearchPanel.tsx
src/components/settings/: SettingsModal.tsx
src/components/store/: StorePanel.tsx
src/components/teamchat/: TeamChat.tsx
src/components/terminal/: MultiTerminal.tsx  TerminalView.tsx
src/lib/: agent-instructions.ts  board.ts  orchestrator.ts  persistence.ts  plugins.ts  ruflo.ts
src/stores/: agentStore.ts  editorStore.ts  projectStore.ts  settingsStore.ts  storeStore.ts
