[package]
name = "idemanta"
version = "0.1.0"
description = "IDEManta - Multi-Agent IDE"
authors = ["Manta"]
edition = "2021"

[lib]
name = "idemanta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
portable-pty = "0.9.0"

